--- a/examples/options.yml
+++ b/examples/options.yml
@@ -18,6 +18,8 @@ sleep_time:
       start_time: "00:00"
       end_time: "08:00"
     black_image_mode: true
+#disabled_providers:
+#  - ydArt
 providers:
   ydArt:
     image_generate_threshold: 10
@@ -28,3 +30,6 @@ providers:
       - time_range:
           start_time: "00:00"
           end_time: "08:00"
+  lim:
+    image_generate_threshold: 10
+    local_image_folder: /lim_images_directory
